--- a/client/containers/NetworkView/style.css
+++ b/client/containers/NetworkView/style.css
@@ -2,12 +2,14 @@ html,
 body {
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
 }
 
 body {
     font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
     line-height: 1.4em;
-    background: #f5f5f5;
+    background: pink;
     color: #4d4d4d;
     width: 100%;
     margin: 0 auto;
@@ -18,8 +20,9 @@ body {
     font-weight: 300;
 }
 
-.normal {
+.main {
     width: 100%;
-    background: #fff;
+    height: 100%;
+    background: blue;
     position: relative;
 }
