--- a/client/components/TopPage/style.css
+++ b/client/components/TopPage/style.css
@@ -7,6 +7,8 @@
     width: 100%;
     height: 100%;
     background-color: #1F272A;
+    /*background-color: #EEEEEE;*/
+    background-image: url('../../assets/images/bgnet.svg');
 }
 
 .grid {
